Fix notifications z-index

--- a/assets/js/blocks/notifications/notifications.styl
+++ b/assets/js/blocks/notifications/notifications.styl
@@ -1,7 +1,7 @@
 .notifications
   overflow: hidden
   position: fixed
-  z-index: 0
+  z-index: -100000000000
 
   top: 0
   right: 0
